improved SEO and bugfixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,6 +283,78 @@ canvas {
 .section-title-span {
   display: block;
 }
+
+#specList {
+    padding:40px 0px;
+}
+
+#specList::after {
+    clear:both;
+    content:"";
+    display:block;
+}
+
+#specList > div{
+    background:white;
+    box-shadow: 10px 10px 143px -26px rgba(145,145,145,1);
+    border-radius: 20px;
+    width:30%;
+    margin-right:5%;
+    float:left;
+    padding:30px;
+    text-align: center;
+    height:175px;
+    margin-bottom:20px;
+    font-size:15px;
+}
+
+#specList h3{
+    font-size:25px;
+    height:81px;
+    position: relative;
+    margin:0px;
+}
+
+#specList h3::after {
+    content:"";
+    display:block;
+    height:1px;
+    background: #3ab099;
+    width:50px;
+    position:absolute;
+    bottom:10px;
+    left:50%;
+    margin-left:-25px;
+}
+
+#specList > div:nth-child(3n+3) {
+    margin-right:0px;
+}
+
+@media screen and (max-width:750px) {
+    #specList > div {
+        width:47.5%;
+        margin-right:5% !important;
+    }
+    #specList > div:nth-child(even) {
+        margin-right:0px !important;
+    }
+}
+
+@media screen and (max-width:500px) {
+    #specList h3{
+        font-size:17px;
+        height:67px;
+    }
+    #specList > div {
+        padding:20px;
+        font-size:13px;
+        height:150px;
+    }
+}
+
+
+
 /*======================================
 8.4 - Countdown
 ======================================*/
